# the-work-in-progress

./: .env  .eslintrc  .gitignore  .mediaImports  README.md  convertDir.sh  package.json  remotion.config.ts  render.sh  render.ts
.github/: FUNDING.yml
documentalist/: Cargo.toml
documentalist/src/: error.rs  input_cursor.rs  main.rs  output_cursor.rs  single_input_transcoder.rs
documentalist/src/utils/: .env  Cargo.toml
documentalist/src/utils/examples/: concat-feed.rs  preview-entry.rs  preview-feed.rs  preview-timeline-file.rs
documentalist/src/utils/src/: dest.rs  destination.rs  entry.rs  error.rs  feed.rs  lib.rs  pipe.rs  pipe_state_manager.rs  preview.rs  project.rs  traits.rs
documentalist/src/utils/src/effects/: bin.rs  mod.rs  tc.rs  trim.rs  vol.rs
documentalist/src/utils/src/timeline/: mod.rs  sink.rs
documentalist/src/utils/tests/: feed_to_dest.rs  project.rs
documentalist/src/utils/tests/fixtures/: example.timeline.yaml  example.timeline.yml
remotion/: .env  remotion.config.ts  stichUpDir.sh
remotion/src/: ClipPreview.tsx  Speech.tsx  index.ts  phrasesToSpeech.ts  types.d.ts
remotion/src/Episodes/: Ep01.tsx  Ep05.tsx  Trailer.tsx  constants.ts
remotion/src/Episodes/Standard/: Editor.tsx  Episode.tsx  hooks.ts
remotion/src/Head/: Head.tsx  TalkingHead.tsx
remotion/src/Video/: FastForwardVideo.tsx  SafeSpeedVideo.tsx  types.ts
remotion/src/server/: meta.ts  types.ts
src/: AcceleratedVideo.tsx  Blur.tsx  ClipExport.tsx  ClipPreview.tsx  Clock.tsx  Episode.tsx  ErrorWrapper.tsx  PresentationClip.tsx  Root.tsx  Slides.tsx  SpeechBooth.tsx  Splash.tsx  VideoClip.tsx  constants.ts  phrasesToSpeech.ts  types.d.ts
src/Episodes/: Ep01.tsx  Ep02.tsx  Ep02.yaml  Trailer.tsx  constants.ts
src/Episodes/Ep01/: Ep01.tsx  Ep02.tsx
src/Episodes/Standard/: Editor.tsx  Episode.tsx  scriptFromYaml.ts  types.ts  useEpisodeMeta.ts
src/Episodes/Trailer/: Trailer.tsx
src/Head/: Head.tsx  Mouth.tsx  SpeakingHead.tsx  TalkingHead.tsx  TiltingHead.tsx
src/Root/: Components.tsx  Editors.tsx  Previews.tsx  Root.tsx
src/Slides/: PresentationClip.tsx  Slides.tsx
src/Video/: AcceleratedVideo.tsx  Blur.tsx  ClipWithSpeech.tsx  ClipWithoutSpeech.tsx  FastForwardVideo.tsx  NormalSpeedVideo.tsx  RemappedFrameContext.tsx  VideoClip.tsx
src/server/: composition.ts  index.ts  meta.ts  render.ts  scriptFromYaml.ts
