[package]
name = "utils"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "^0.17"
gst = { package = "gstreamer", version = "^0.20" }
gst-gl = { package = "gstreamer-gl", version="^0.20", optional = true }
gst-gl-egl = { package = "gstreamer-gl-egl", version="^0.20", optional = true }
gst-gl-wayland = { package = "gstreamer-gl-wayland", version="^0.20", optional = true }
gst-gl-x11 = { package = "gstreamer-gl-x11", version="^0.20", optional = true }
gst-app = { package = "gstreamer-app", version="^0.20" }
gst-audio = { package = "gstreamer-audio", version="^0.20" }
gst-base = { package = "gstreamer-base", version="^0.20" }
gst-video = { package = "gstreamer-video", version="^0.20" }
gst-pbutils = { package = "gstreamer-pbutils", version="^0.20" }
gst-play = { package = "gstreamer-play", version="^0.20", optional = true }
gst-player = { package = "gstreamer-player", version="^0.20", optional = true }
ges = { package = "gstreamer-editing-services", version="^0.20", optional = true }
gst-sdp = { package = "gstreamer-sdp", version="^0.20", optional = true }
gst-rtsp = { package = "gstreamer-rtsp", version="^0.20", optional = true }
gst-rtsp-server = { package = "gstreamer-rtsp-server", version="^0.20", optional = true }
gst-allocators = { package = "gstreamer-allocators", version="^0.20", optional = true }
gtk = { git = "https://github.com/gtk-rs/gtk3-rs", optional = true }
gdk = { git = "https://github.com/gtk-rs/gtk3-rs", optional = true }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }
anyhow = "1.0"
derive_more = "0.99.5"
futures = "0.3"
byte-slice-cast = "1"
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"], optional = true }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }
pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }
glutin = { version = "0.30", optional = true }
once_cell = "1.0"
image = { version = "0.24", optional = true }
memmap2 = { version = "0.5", optional = true }
memfd = { version = "0.6", optional = true }
uds = { version = "0.2", optional = true }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features=["Win32_Graphics_Direct3D11",
    "Win32_Foundation", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common", "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Imaging", "Win32_System_Com", "Foundation_Numerics"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[build-dependencies]
gl_generator = { version = "0.14", optional = true}

[features]
default = []
gtksink = ["gtk", "gio"]
gtkvideooverlay = ["gtk", "gdk", "gio"]
gtkvideooverlay-x11 = ["gtkvideooverlay"]
gtkvideooverlay-quartz = ["gtkvideooverlay"]
rtsp-server = ["gst-rtsp-server", "gst-rtsp", "gst-sdp"]
rtsp-server-record = ["gst-rtsp-server", "gst-rtsp", "gio"]
pango-cairo = ["pango", "pangocairo", "cairo-rs"]
overlay-composition = ["pango", "pangocairo", "cairo-rs"]
gl = ["gst-gl", "gl_generator", "glutin"]
gst-gl-x11 = ["dep:gst-gl-x11"]
gst-gl-egl = ["dep:gst-gl-egl"]
gst-gl-wayland = ["dep:gst-gl-wayland"]
allocators = ["gst-allocators", "memmap2", "memfd", "uds"]

